# anvil-file-transfer

./: README.md  requirements.txt  setup.cfg  transfer.py
