[metadata]
name = anvil-file-transfer
version = 0.1.0
description = Transfer controlled-access ANVIL files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IGVF-DACC/anvil-file-transfer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    requests>=2.27.1

[options.extras_require]
test =
    pytest==5.3.2
    pytest-mock==2.0.0
    pytest-instafail==0.4.2
    pytest-exact-fixtures==0.3

[options.packages.find]
where = src